# rustshield-ids

./: .gitignore  Cargo.toml  DOCUMENTATION.md  LICENSE  README.md
config/: default.yaml  example.yaml
rules/: default.yaml
src/: main.rs
src/ai/: mod.rs
src/ai_explainer/: mod.rs
src/api/: alerts.rs  analytics.rs  correlation.rs  health.rs  metrics.rs  mod.rs  stats.rs  websocket.rs
src/capture/: mod.rs
src/cli/: dashboard.rs  mod.rs  monitoring.rs
src/config/: mod.rs
src/correlator/: mod.rs
src/dashboard/: mod.rs
src/detection/: mod.rs  rules.rs
src/dpi/: mod.rs
src/engine/: mod.rs
src/engine/detectors/: anomaly.rs  brute_force.rs  dos.rs  mod.rs  port_scan.rs
src/forensics/: mod.rs
src/logging/: mod.rs
src/models/: mod.rs
src/profiler/: mod.rs
src/response/: mod.rs
src/simulator/: mod.rs
src/soc/: mod.rs
src/ui/: aggregator.rs  dashboard.rs  mod.rs  sparkline.rs
src/utils/: mod.rs
