[package]
name = "rustshield-ids"
version = "0.1.0"
edition = "2021"
authors = ["Security Engineer <security@example.com>"]
description = "AI-Assisted Intrusion Detection System in Rust"
license = "MIT"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
tokio-util = "0.7"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Packet capture
pcap = "1.1"
pnet = "0.34"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

# ML / Statistical analysis (optional - using custom implementation)
# linfa = "0.7"
# linfa-clustering = "0.7"
# linfa-preprocessing = "0.7"
ndarray = "0.15"
rand = "0.8"
statrs = "0.16"

# TUI Dashboard
ratatui = "0.24"
crossterm = "0.27"

# Concurrency and channels
crossbeam-channel = "0.5"
flume = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"

# IP and network types
ipnetwork = "0.20"

# Hashing for fingerprints
blake3 = "1.5"

# Binary serialization for ML models
bincode = "1.3"

# REST API (Axum)
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "compression-gzip"] }
hyper = { version = "1.0", features = ["full"] }

# Rate limiting
governor = "0.2"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.9"
mockall = "0.12"

[[bin]]
name = "rustshield"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
